syntax = "proto3";
package canvas.canvas;

import "gogoproto/gogo.proto";
import "canvas/canvas/params.proto";
import "canvas/canvas/canvas.proto";
import "canvas/canvas/stored_colors.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "canvas/x/canvas/types";

// GenesisState defines the canvas module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  Canvas canvas = 2;
  repeated StoredColors storedColorsList = 3 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
